ingress/prd/alb2-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-alb-service
  namespace: voucher-management-web
spec:
  type: ExternalName
  externalName: internal-k8s-voucherm-ingressv-6993ccf01a-1431773549.ap-southeast-1.elb.amazonaws.com
  ports:
    - port: 80
